--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
 }
 
 .instagram-phone img {
-    height: 50rem;
+    margin-top: 40px;
+    height: 45rem;
 }
 
 .instagram-continue {
@@ -42,7 +43,8 @@ body {
     justify-content: space-around; /* vertical */
     flex-direction: column;
     width: 50%;
-    min-height: 34rem;
+    min-height: 33rem;
+    padding-top: 30px;
 }
 
 .group {
@@ -53,6 +55,7 @@ body {
     background-color: #ffffff;
     width: 100%;
     padding: 1.3rem 0;
+    margin-bottom: 10px;
     border: 1px solid lightgray;
 }
 
@@ -61,7 +64,7 @@ body {
 }
 
 .instagram-logo {
-    height: 3rem;
+    height: 3.4rem;
 }
 
 .profile-photo {
@@ -129,10 +132,36 @@ body {
 
 /* media queries */
 
+@media (max-width: 1115px) {
+    .instagram-wrapper {
+        width: 90%;
+    }
+}
 
 @media (max-width: 1024px) {
     .instagram-wrapper {
         width: 90%;
+    }
+}
+
+@media (max-width: 875px) {
+    body {
+        background-color: #ffffff;
+    }
+    .instagram-wrapper {
+        width: 100%;
+        align-items:flex-start; /* horizontal */
+        padding-top: 30px;
+    }
+    .instagram-phone {
+        display: none;
+    }
+    .instagram-continue {
+        width: 100%;
+    }
+    
+    .group {
+        border: 1px solid transparent;
     }
 }
 
@@ -143,6 +172,8 @@ body {
 
     .instagram-wrapper {
         width: 90%;
+        align-items:flex-start; /* horizontal */
+        padding-top: 30px;
     }
 
     .instagram-phone {
